--- a/www/index.html
+++ b/www/index.html
@@ -34,15 +34,14 @@
 <script  type="module">
 
 	import { P20 } from './src/p20/P20.js';
-	import { Menu} from './src/p20/Menu.js';
+	import { Menu} from './src/p20/menu/Menu.js';
 	window.trace = window.console.log.bind(window.console);
 
 	
 
-	var p20=new P20('resources/font/helvetiker_bold.typeface.json',function(s,p,p1){
-		trace(s,p,p1)		
-		if(s=="complit"){
-			
+	var p20=new P20(function(s,p,p1){
+		trace(s,p,p1);		
+		if(s=="complit"){			
 			return;
 		}
 	});
@@ -52,6 +51,9 @@
 		trace(s,p,p1);
 		p20.setArrObj(p);
 	});
+
+	menu.setP20(p20)
+
 
 	
 
@@ -72,8 +74,9 @@
 	let s='[{"id":0,"point0":{"x":0,"y":0},"point1":{"x":750,"y":-1350},"width":500},{"id":1,"point0":{"x":750,"y":-1350},"point1":{"x":2250,"y":-1350},"width":500},{"id":2,"point0":{"x":2250,"y":-1350},"point1":{"x":3000,"y":0},"width":500},{"id":3,"point0":{"x":0,"y":0},"point1":{"x":-1575,"y":0},"width":500},{"id":4,"point0":{"x":-1575,"y":0},"point1":{"x":-1575,"y":4000},"width":500},{"id":6,"point0":{"x":4625,"y":4000},"point1":{"x":4625,"y":0},"width":500},{"id":7,"point0":{"x":4625,"y":0},"point1":{"x":3000,"y":0},"width":500},{"id":8,"point0":{"x":-1575,"y":1850},"point1":{"x":4625,"y":1850},"width":400},{"id":9,"point0":{"x":-1575,"y":4000},"point1":{"x":750,"y":4000},"width":500},{"id":10,"point0":{"x":750,"y":5296},"point1":{"x":2250,"y":5296},"width":500},{"id":11,"point0":{"x":2250,"y":5296},"point1":{"x":2250,"y":4000},"width":500},{"id":12,"point0":{"x":2250,"y":4000},"point1":{"x":4625,"y":4000},"width":500},{"id":13,"point0":{"x":750,"y":4000},"point1":{"x":750,"y":5296},"width":500},{"id":14,"point0":{"x":750,"y":4000},"point1":{"x":750,"y":6132},"width":400,"alignmentThisSide":"right","alignmentId":13,"alignmentOtherSide":"right"},{"id":15,"point0":{"x":750,"y":6132},"point1":{"x":-1061,"y":6132},"width":400},{"id":16,"point0":{"x":-1061,"y":6132},"point1":{"x":-1061,"y":4000},"width":400},{"id":17,"point0":{"x":-1061,"y":4000},"point1":{"x":750,"y":4000},"width":400},{"id":18,"point0":{"x":2250,"y":4000},"point1":{"x":2250,"y":1850},"width":400,"alignmentThisSide":"right","alignmentId":11,"alignmentOtherSide":"left"}]';
 
 	//s='[{"id":0,"point0":{"x":0,"y":0},"point1":{"x":750,"y":-1350},"width":500}]'
-    menu.setArrObj(JSON.parse(s));
+    
     p20.setArrObj(JSON.parse(s));
+    menu.setArrObj(JSON.parse(s));
 
 	
 </script>	
