--- a/www/index.html
+++ b/www/index.html
@@ -51,8 +51,7 @@
 		trace(s,p,p1);
 		p20.setArrObj(p);
 	});
-
-	menu.setP20(p20)
+	menu.setP20(p20);
 
 
 	
@@ -73,9 +72,12 @@
 
 	let s='[{"id":0,"point0":{"x":0,"y":0},"point1":{"x":750,"y":-1350},"width":500},{"id":1,"point0":{"x":750,"y":-1350},"point1":{"x":2250,"y":-1350},"width":500},{"id":2,"point0":{"x":2250,"y":-1350},"point1":{"x":3000,"y":0},"width":500},{"id":3,"point0":{"x":0,"y":0},"point1":{"x":-1575,"y":0},"width":500},{"id":4,"point0":{"x":-1575,"y":0},"point1":{"x":-1575,"y":4000},"width":500},{"id":6,"point0":{"x":4625,"y":4000},"point1":{"x":4625,"y":0},"width":500},{"id":7,"point0":{"x":4625,"y":0},"point1":{"x":3000,"y":0},"width":500},{"id":8,"point0":{"x":-1575,"y":1850},"point1":{"x":4625,"y":1850},"width":400},{"id":9,"point0":{"x":-1575,"y":4000},"point1":{"x":750,"y":4000},"width":500},{"id":10,"point0":{"x":750,"y":5296},"point1":{"x":2250,"y":5296},"width":500},{"id":11,"point0":{"x":2250,"y":5296},"point1":{"x":2250,"y":4000},"width":500},{"id":12,"point0":{"x":2250,"y":4000},"point1":{"x":4625,"y":4000},"width":500},{"id":13,"point0":{"x":750,"y":4000},"point1":{"x":750,"y":5296},"width":500},{"id":14,"point0":{"x":750,"y":4000},"point1":{"x":750,"y":6132},"width":400,"alignmentThisSide":"right","alignmentId":13,"alignmentOtherSide":"right"},{"id":15,"point0":{"x":750,"y":6132},"point1":{"x":-1061,"y":6132},"width":400},{"id":16,"point0":{"x":-1061,"y":6132},"point1":{"x":-1061,"y":4000},"width":400},{"id":17,"point0":{"x":-1061,"y":4000},"point1":{"x":750,"y":4000},"width":400},{"id":18,"point0":{"x":2250,"y":4000},"point1":{"x":2250,"y":1850},"width":400,"alignmentThisSide":"right","alignmentId":11,"alignmentOtherSide":"left"}]';
 
-	//s='[{"id":0,"point0":{"x":0,"y":0},"point1":{"x":750,"y":-1350},"width":500}]'
+
+	let ss='{"type":"SpStageSten","tipPoint":"SpPointSten","tipSplice":"SpliceSten","arrPoint":[{"type":"SpPointSten","idArr":0,"position":{"x":-1800,"y":4800}},{"type":"SpPointSten","idArr":1,"position":{"x":-1700,"y":7800}},{"type":"SpPointSten","idArr":2,"position":{"x":-1700,"y":1200}},{"type":"SpPointSten","idArr":3,"position":{"x":1700,"y":5000}},{"type":"SpPointSten","idArr":4,"position":{"x":3300,"y":-900}},{"type":"SpPointSten","idArr":5,"position":{"x":-5500,"y":-500}},{"type":"SpPointSten","idArr":6,"position":{"x":4600,"y":10400}},{"type":"SpPointSten","idArr":7,"position":{"x":-5300,"y":10300}}],"arrSplice":[{"type":"SpliceSten","idArr":0,"delph":500,"tip":0,"position":{"x":-1800,"y":4800},"position1":{"x":-1700,"y":7800},"connected":{"arr":["53D6D9F4-F393-4776-8B33-9F076AC67244","20D52CCD-2AAC-4F73-9E53-19117CADF9DC","021B1562-1EA7-4754-9239-A1FF621E259A"],"arr1":["53D6D9F4-F393-4776-8B33-9F076AC67244"]},"uuid":"53D6D9F4-F393-4776-8B33-9F076AC67244","height":300,"sUi":-1,"idUi":3},{"type":"SpliceSten","idArr":1,"delph":191,"tip":0,"position":{"x":-1800,"y":4800},"position1":{"x":-1700,"y":1200},"connected":{"arr":["53D6D9F4-F393-4776-8B33-9F076AC67244","20D52CCD-2AAC-4F73-9E53-19117CADF9DC","021B1562-1EA7-4754-9239-A1FF621E259A"],"arr1":["20D52CCD-2AAC-4F73-9E53-19117CADF9DC"]},"uuid":"20D52CCD-2AAC-4F73-9E53-19117CADF9DC","height":300,"sUi":3,"idUi":1},{"type":"SpliceSten","idArr":2,"delph":500,"tip":0,"position":{"x":1700,"y":5000},"position1":{"x":-1800,"y":4800},"connected":{"arr":["021B1562-1EA7-4754-9239-A1FF621E259A"],"arr1":["53D6D9F4-F393-4776-8B33-9F076AC67244","20D52CCD-2AAC-4F73-9E53-19117CADF9DC","021B1562-1EA7-4754-9239-A1FF621E259A"]},"uuid":"021B1562-1EA7-4754-9239-A1FF621E259A","height":300,"sUi":-1,"idUi":2},{"type":"SpliceSten","idArr":3,"delph":500,"tip":0,"position":{"x":3300,"y":-900},"position1":{"x":-5500,"y":-500},"connected":{"arr":["21A8C0F3-671F-4B62-B1DE-3FA8A95E9B9F"],"arr1":["21A8C0F3-671F-4B62-B1DE-3FA8A95E9B9F"]},"uuid":"21A8C0F3-671F-4B62-B1DE-3FA8A95E9B9F","height":300,"sUi":-1,"idUi":291},{"type":"SpliceSten","idArr":4,"delph":500,"tip":0,"position":{"x":4600,"y":10400},"position1":{"x":-5300,"y":10300},"connected":{"arr":["626A3DAD-3C77-4FC3-BBC7-84B0E687C880"],"arr1":["626A3DAD-3C77-4FC3-BBC7-84B0E687C880"]},"uuid":"626A3DAD-3C77-4FC3-BBC7-84B0E687C880","height":300,"sUi":-1,"idUi":486}],"arrPol":[]}'
+	
+	
     
-    p20.setArrObj(JSON.parse(s));
+    p20.setArrObj(JSON.parse(ss));
     menu.setArrObj(JSON.parse(s));
 
 	
