--- a/www/index.html
+++ b/www/index.html
@@ -1,85 +1,72 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>plan2020</title>
+<title>panorama</title>	
+<script src='src/libMy/AppLoader.js'></script>
 
 
 
 
-<script src='src/lib/jquery-1.11.3.js'></script>
-<!--
-
-<script src='src/libMy/MenuScene.js'></script>
-<script src='src/libMy/SceneSB.js'></script>
-	дабаг-->	
-<script src='src/lib/tween.min.js'></script>
-<script src='src/lib/pixi.js'></script>
-<script src='src/lib/three.min.js'></script>
-
-<script src='src/libMy/divLib.js'></script><!--дабаг-->
+<script>
 
 
 
 
 
+	var trace = window.console.log.bind(window.console);
 
-
-<style type="text/css">
-	#stats { position: absolute; top:0; left: 200px; }
-</style>
-
-</head>
-<meta name="viewport" content="width=device-width,height=device-height,user-scalable=no user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-<body>
-
-<script  type="module">
-
-	import { P20 } from './src/p20/P20.js';
-	import { Menu} from './src/p20/menu/Menu.js';
-	window.trace = window.console.log.bind(window.console);
-
-	
-
-	var p20=new P20(function(s,p,p1){
-		trace(s,p,p1);		
-		if(s=="complit"){			
-			return;
-		}
-	});
-	document.body.appendChild(p20.div); //приатачиваем див там 3д и соты
-
-	var menu=new Menu(function(s,p,p1){		
-		trace(s,p,p1);
-		p20.setArrObj(p);
-	});
-	menu.setP20(p20);
-
-
-	
+	var dcmParam;	
+	var appLoader;
+	var path="src/"
+	var plus="?"+Math.random();
+	var manifest = [
+		{src: path + 'libMy/divLib.js' + plus},		
+		{src: path + 'lib/jquery-1.11.3.js' + plus},
+		{src: path + 'lib/three.min.js' + plus},
+		{src: path + 'lib/pixi.js' + plus},
+		{src: path + '/lib/tween.min.js' + plus},
+		{src:'build/p20.min.js' + plus}
+	];
 
 
 
-
-
+	var main
 	function sizeWindow () {
 		var w = document.documentElement.clientWidth;
 		var h = document.documentElement.clientHeight;
-		menu.sizeWindow(w,h);
-		p20.sizeWindow(w,h);
+		if (main) main.sizeWindow(w, h);		
+		if (appLoader) appLoader.sizeWindow(w,h);
+
 	}
-	window.onresize = sizeWindow;
-	sizeWindow();
 
 
-	let s='[{"id":0,"point0":{"x":0,"y":0},"point1":{"x":750,"y":-1350},"width":500},{"id":1,"point0":{"x":750,"y":-1350},"point1":{"x":2250,"y":-1350},"width":500},{"id":2,"point0":{"x":2250,"y":-1350},"point1":{"x":3000,"y":0},"width":500},{"id":3,"point0":{"x":0,"y":0},"point1":{"x":-1575,"y":0},"width":500},{"id":4,"point0":{"x":-1575,"y":0},"point1":{"x":-1575,"y":4000},"width":500},{"id":6,"point0":{"x":4625,"y":4000},"point1":{"x":4625,"y":0},"width":500},{"id":7,"point0":{"x":4625,"y":0},"point1":{"x":3000,"y":0},"width":500},{"id":8,"point0":{"x":-1575,"y":1850},"point1":{"x":4625,"y":1850},"width":400},{"id":9,"point0":{"x":-1575,"y":4000},"point1":{"x":750,"y":4000},"width":500},{"id":10,"point0":{"x":750,"y":5296},"point1":{"x":2250,"y":5296},"width":500},{"id":11,"point0":{"x":2250,"y":5296},"point1":{"x":2250,"y":4000},"width":500},{"id":12,"point0":{"x":2250,"y":4000},"point1":{"x":4625,"y":4000},"width":500},{"id":13,"point0":{"x":750,"y":4000},"point1":{"x":750,"y":5296},"width":500},{"id":14,"point0":{"x":750,"y":4000},"point1":{"x":750,"y":6132},"width":400,"alignmentThisSide":"right","alignmentId":13,"alignmentOtherSide":"right"},{"id":15,"point0":{"x":750,"y":6132},"point1":{"x":-1061,"y":6132},"width":400},{"id":16,"point0":{"x":-1061,"y":6132},"point1":{"x":-1061,"y":4000},"width":400},{"id":17,"point0":{"x":-1061,"y":4000},"point1":{"x":750,"y":4000},"width":400},{"id":18,"point0":{"x":2250,"y":4000},"point1":{"x":2250,"y":1850},"width":400,"alignmentThisSide":"right","alignmentId":11,"alignmentOtherSide":"left"}]';
+	function init () {
+		window.onresize = sizeWindow;		
+		appLoader = new AppLoader(
+			null,
+			"resources/image/load.png",			
+			manifest,
+			function () {  				
+				dcmParam = new DCM();				
+				main=new Main(function(s, p){
+					if(s=="init"){
+						appLoader.indicator.procent = 100;
+						sizeWindow()					
+					}
+				},0)				
+				sizeWindow()				
+			},
+			null,
+			-85		
+		)
+		sizeWindow();		
+	}
+</script>
 
+<style type="text/css">
+	#stats { position: absolute; top:0; left: 200px; }	
+</style>
+</head>
+<meta name="viewport" content="width=device-width,height=device-height,user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+<body onload="init()">
 
-	let ss='{"type":"SpStageSten","tipPoint":"SpPointSten","tipSplice":"SpliceSten","arrPoint":[{"type":"SpPointSten","idArr":0,"position":{"x":-1800,"y":4800}},{"type":"SpPointSten","idArr":1,"position":{"x":-1700,"y":7800}},{"type":"SpPointSten","idArr":2,"position":{"x":-1700,"y":1200}},{"type":"SpPointSten","idArr":3,"position":{"x":1700,"y":5000}},{"type":"SpPointSten","idArr":4,"position":{"x":3300,"y":-900}},{"type":"SpPointSten","idArr":5,"position":{"x":-5500,"y":-500}},{"type":"SpPointSten","idArr":6,"position":{"x":4600,"y":10400}},{"type":"SpPointSten","idArr":7,"position":{"x":-5300,"y":10300}}],"arrSplice":[{"type":"SpliceSten","idArr":0,"delph":500,"tip":0,"position":{"x":-1800,"y":4800},"position1":{"x":-1700,"y":7800},"connected":{"arr":["53D6D9F4-F393-4776-8B33-9F076AC67244","20D52CCD-2AAC-4F73-9E53-19117CADF9DC","021B1562-1EA7-4754-9239-A1FF621E259A"],"arr1":["53D6D9F4-F393-4776-8B33-9F076AC67244"]},"uuid":"53D6D9F4-F393-4776-8B33-9F076AC67244","height":300,"sUi":-1,"idUi":3},{"type":"SpliceSten","idArr":1,"delph":191,"tip":0,"position":{"x":-1800,"y":4800},"position1":{"x":-1700,"y":1200},"connected":{"arr":["53D6D9F4-F393-4776-8B33-9F076AC67244","20D52CCD-2AAC-4F73-9E53-19117CADF9DC","021B1562-1EA7-4754-9239-A1FF621E259A"],"arr1":["20D52CCD-2AAC-4F73-9E53-19117CADF9DC"]},"uuid":"20D52CCD-2AAC-4F73-9E53-19117CADF9DC","height":300,"sUi":3,"idUi":1},{"type":"SpliceSten","idArr":2,"delph":500,"tip":0,"position":{"x":1700,"y":5000},"position1":{"x":-1800,"y":4800},"connected":{"arr":["021B1562-1EA7-4754-9239-A1FF621E259A"],"arr1":["53D6D9F4-F393-4776-8B33-9F076AC67244","20D52CCD-2AAC-4F73-9E53-19117CADF9DC","021B1562-1EA7-4754-9239-A1FF621E259A"]},"uuid":"021B1562-1EA7-4754-9239-A1FF621E259A","height":300,"sUi":-1,"idUi":2},{"type":"SpliceSten","idArr":3,"delph":500,"tip":0,"position":{"x":3300,"y":-900},"position1":{"x":-5500,"y":-500},"connected":{"arr":["21A8C0F3-671F-4B62-B1DE-3FA8A95E9B9F"],"arr1":["21A8C0F3-671F-4B62-B1DE-3FA8A95E9B9F"]},"uuid":"21A8C0F3-671F-4B62-B1DE-3FA8A95E9B9F","height":300,"sUi":-1,"idUi":291},{"type":"SpliceSten","idArr":4,"delph":500,"tip":0,"position":{"x":4600,"y":10400},"position1":{"x":-5300,"y":10300},"connected":{"arr":["626A3DAD-3C77-4FC3-BBC7-84B0E687C880"],"arr1":["626A3DAD-3C77-4FC3-BBC7-84B0E687C880"]},"uuid":"626A3DAD-3C77-4FC3-BBC7-84B0E687C880","height":300,"sUi":-1,"idUi":486}],"arrPol":[]}'
-	
-	
-    
-    p20.setArrObj(JSON.parse(ss));
-    menu.setArrObj(JSON.parse(s));
-
-	
-</script>	
 </body></html>
