--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>panorama</title>	
+<title>p20</title>	
 <script src='src/libMy/AppLoader.js'></script>
-
-
 
 
 <script>
