--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,8 @@
 
 
 	function init () {
-		window.onresize = sizeWindow;		
+		window.onresize = sizeWindow;
+		trace("!")		
 		appLoader = new AppLoader(
 			null,
 			"resources/image/load.png",			
