--- a/www/forms/adminDev/index.html
+++ b/www/forms/adminDev/index.html
@@ -6,6 +6,7 @@
 <script src='../lib/tween.min.js'></script>
 <script src='../lib/three.min.js'></script>
 <script src='../lib/divLib.js'></script>
+<script src='../lib/divLibPlus.js'></script>
 
 
 
