--- a/www/forms/adminDev/index.html
+++ b/www/forms/adminDev/index.html
@@ -9,13 +9,6 @@
 <script src='../lib/divLibPlus.js'></script>
 
 
-
-
-
-
-
-
-
 <style type="text/css">
 	#stats { position: absolute; top:0; left: 200px; }
 </style>
@@ -37,12 +30,15 @@
 
 	function init(){
 
-		
+		/*
+		var dCont=new DCont(document.body);
+		new DInput(dCont,  300,300)*/
+
 		main=new Main(document.body, function(s,p,p1){
 
 		})
 
-		window.dcmParam = new DCM();
+		
 
 		/*var dCont=new DCont(document.body);
 
@@ -92,6 +88,7 @@
 	document.addEventListener("DOMContentLoaded", function() {
 		init()
 	});
+
 </script>	
 
 <style type="text/css">
